# gui-updater

./: .gitignore  configure.ac  meson.build
data/: 10-gui-updater.rules  Makefile.am  gui-updater.ui  meson.build
debian/: changelog  control  copyright  gui-updater.install  rules
po/: POTFILES.in  en_GB.po  hy.po  it.po  ko.po  pt_BR.po
src/: Makefile.am  meson.build  updater.c
